frotnend-205: * fix with categories button wraps

--- a/frontend/src/pages/browse-page/styles.module.scss
+++ b/frontend/src/pages/browse-page/styles.module.scss
@@ -27,6 +27,8 @@
   padding: 0 47px;
   color: var(--text-gray-color);
   font-size: 20px;
+  white-space: nowrap;
+  text-transform: capitalize;
   background: none;
 }
 
